--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
-name    = perlx-bash
+name    = PerlX-bash
 author  = Buddy Burden <barefootcoder@gmail.com>
 license = Artistic_2_0
 copyright_holder = Buddy Burden
-copyright_year   = 2015
+copyright_year   = 2015-2017
 
 version = 0.01
 
